# tess

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindGLEW.cmake  FindSDL2.cmake
data/shaders/: pixel_shader.glsl  vertex_shader.glsl
data/textures/: wall_color_512.tif
lib/osx/GLEW.framework/Versions/2.0.0/: GLEW
lib/osx/GLEW.framework/Versions/2.0.0/Resources/: Info.plist
lib/osx/SDL2.framework/Versions/A/: SDL2
lib/osx/SDL2_image.framework/Versions/A/: SDL2_image
pointless/: Camera.cpp  Camera.h  Common.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
